syntax = "proto3";

package pb.unit.common;
option go_package = "github.com/byeol-i/firebase-auth-module/pb/unit/common";

message ReturnMsg {
    string result = 1;
    string error = 2;
}